--- a/app/views/beetles/_form.html.erb
+++ b/app/views/beetles/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :nickname %>
   </div>
   <div class="field">
-    <%= f.label :zip %><br>
-    <%= f.text_field :zip %>
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
   </div>
   <div class="field">
     <%= f.label :year %><br>
