--- a/app/views/beetles/show.html.erb
+++ b/app/views/beetles/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+
 <p>
   <strong>User:</strong>
   <%= @beetle.user.email if @beetle.user %>
@@ -11,8 +12,8 @@
 </p>
 
 <p>
-  <strong>Zip:</strong>
-  <%= @beetle.zip %>
+  <strong>Address:</strong>
+  <%= @beetle.address %>
 </p>
 
 <p>
