--- a/app/views/beetles/show.html.erb
+++ b/app/views/beetles/show.html.erb
@@ -7,6 +7,11 @@
 </p>
 
 <p>
+  <strong><%= image_tag @beetle.image.url(:medium) %></strong>
+
+</p>
+
+<p>
   <strong>Nickname:</strong>
   <%= @beetle.nickname %>
 </p>
@@ -36,10 +41,7 @@
   <%= @beetle.interior %>
 </p>
 
-<p>
-  <strong>Picture:</strong>
-  <%= @beetle.picture %>
-</p>
+
 
 <%= link_to 'Edit', edit_beetle_path(@beetle) %> |
 <%= link_to 'Back', beetles_path %>
