--- a/app/views/beetles/show.html.erb
+++ b/app/views/beetles/show.html.erb
@@ -1,3 +1,4 @@
+
 <p id="notice"><%= notice %></p>
 
 
@@ -42,6 +43,8 @@
 </p>
 
 
+<% if @beetle.user == current_user %>
+  <%= link_to 'Edit', edit_beetle_path(@beetle) %>
+<% end %>
 
-<%= link_to 'Edit', edit_beetle_path(@beetle) %> |
 <%= link_to 'Back', beetles_path %>
