--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-<%= link_to "Home", root_path %>
-<%= link_to "About", about_path %>
+<%= render "layouts/header" %>
 
 <% flash.each do |name, msg| %>
      <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
