--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,43 @@
-<h1>About</h1>
+<div class="container">
+
+<h3>About</h3>
+
+
+  <p>My love for Beetles started with a grey 1972 VW which broke down in the Met building in NYC. Regarless of the break-down annoyances, they are be fun... </p>
+
+  <div class="row">
+    <div class="col-xs-6 col-md-3">
+      <img src="http://3.bp.blogspot.com/-aSwChRs8fqU/TeDWnsrS-zI/AAAAAAAAVLg/HsZv_Xc2hnI/s1600/volkswagen_old_ads13.jpg" class="img-thumbnail">
+        <img data-src="holder.js/100%x180" >
+    </div>
+
+    <div class="col-xs-6 col-md-3">
+      <img src="http://cdn.visualnews.com/wp-content/uploads/2013/09/VW-ads-18.jpg" class="img-thumbnail">
+        <img data-src="holder.js/80%x180" >
+    </div>
+
+      <div class="col-xs-6 col-md-3">
+        <img src="http://www.primermagazine.com/wp-content/uploads/2012/12/VW/VW_5.jpg" class="img-thumbnail">
+          <img data-src="holder.js/100%x180" >
+      </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-6 col-md-3">
+      <img src="http://cdn.visualnews.com/wp-content/uploads/2013/09/VW-ads-12.jpg" class="img-thumbnail">
+        <img data-src="holder.js/100%x180" >
+    </div>
+
+    <div class="col-xs-6 col-md-3">
+      <img src="http://cdn.visualnews.com/wp-content/uploads/2013/09/VW-ads-6.jpg" class="img-thumbnail">
+        <img data-src="holder.js/80%x180" >
+    </div>
+
+      <div class="col-xs-6 col-md-3">
+        <img src="http://cdn.visualnews.com/wp-content/uploads/2013/09/VW-ads-20.jpg" class="img-thumbnail">
+          <img data-src="holder.js/100%x180" >
+      </div>
+  </div>
+
+</div>
+
