--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -8,6 +8,11 @@ $navbar-default-brand-color:     #c0392b;
 $brand-primary:                  #c0392b;
 /*$jumbotron-bg:                   white;*/
 
+$body-bg: #ecf0f1;
+$navbar-inverse-bg: #868F98;
+$navbar-inverse-link-color: white;
+$brand-primary: #f39c12;
+
 @import 'bootstrap';
 
 .center {
@@ -18,7 +23,6 @@ $brand-primary:                  #c0392b;
      font-weight: bold;
 }
 
-#nav {
-
-
+.carousel-inner > .item > img {
+  margin: 0 auto;
 }
