--- a/app/views/beetles/new.html.erb
+++ b/app/views/beetles/new.html.erb
@@ -1,7 +1,13 @@
 <p> Welcome <%= current_user.email %> </p>
 
-<h1>New beetle</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', beetles_path %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3>New beetle</h3>
+  </div>
+  <div class="panel-body">
+    <%= render 'form' %>
+    <div class="panel-footer">
+    <%= link_to 'Back', beetles_path %>
+  </div>
+  </div>
+</div>
