--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,3 +16,40 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3>Sign up</h3>
+  </div>
+
+  <div class="panel-body">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <div>
+        <%= f.label :password %><% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        </div>
+
+        <div><%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+        </div>
+
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "Sign up", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="panel-footer">
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
