--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,54 @@
 <!-- <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p> -->
-<h1>Welcome to my Beetle Hunt app!</h1>
-
+<div class="container">
+  <div class="center"
+  <h3> Beetle Hunt is On!</h3>
+  </div>
 <% if current_user %>
 <%= link_to "See the Beetles", beetles_path %>
 <% end %>
+</div>
+
+<div class="container">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="http://thinkingouttabox.files.wordpress.com/2009/11/images65vwbeetlehowlong1.jpg?w=490" alt="Happy">
+      <div class="carousel-caption">
+        <h1>  </h1>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://thinkingouttabox.files.wordpress.com/2009/11/61vwbeetle3.jpg?w=490" alt="Maxi">
+      <div class="carousel-caption">
+        <h1>  </h1>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://thinkingouttabox.files.wordpress.com/2009/11/66vwbeetlepolice.jpg?w=490" alt="Maxi">
+      <div class="carousel-caption">
+        <h1>  </h1>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+</div>
 
 
 
