Added case study to the About page.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,26 @@
 <h3>About</h3>
 
 
-  <p>My love for Beetles started with a grey 1972 VW which broke down in the Met building in NYC. Regarless of the break-down annoyances, they are be fun... </p>
+  <p>My love for Beetles started with a grey 1972 VW which broke down in the Met building in NYC. Regarless of the break-down annoyances, they are fun... </p>
+
+  </br>
+
+    <div class="row">
+    <div class="col-xs-6 col-md-3">
+      <p>Car Hunt is an app that allows VW Beetle owners create an on-line community and brag about their cars. The main feature, however, is to be able to find a Beetle near you, in case yours breaks down. Get in touch with the owner and ask if they have spare parts. Once they have the spare part, most Beetle owners can fix the problem themseves!</p>
+        <img data-src="holder.js/100%x180" >
+    </div>
+
+    <div class="col-xs-6 col-md-3">
+      <p>This was my first project in my Web Development Immersive program. If my Beetle breaks down again, I would know what to do: search in the nearby, using Car Hunt. Owners can create their profile, add Beetle details and photos. </p>
+        <img data-src="holder.js/80%x180" >
+    </div>
+
+      <div class="col-xs-6 col-md-3">
+        <p>I used Ruby on Rails, ruby gem Devise for authentication, Paperclip for photo uploading, Amazon S3 for storing the photos, ruby gem Geocoder for finding Beetles near your location. The project is deployed on Heroku.</p>
+          <img data-src="holder.js/100%x180" >
+      </div>
+  </div>
 
   <div class="row">
     <div class="col-xs-6 col-md-3">
